@startuml SkillCard
title SkillCard

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

enum CardCategory {
    CHANCE
    COMMUNITY
    SKILL
}

abstract class SkillCard {
    # remainingUses : int
    --
    + getCategory() : CardCategory
    + isUsable() : bool
    + {abstract} getCardName() : string
    + {abstract} clone() : Card*
}

class MoveCard {
    - steps : int
    --
    + getCardName() : string
    + getSteps() : int
    + clone() : Card*
}

class DiscountCard {
    - discountPercent : int
    - duration : int
    --
    + getCardName() : string
    + getDiscount() : int
    + decrementDuration() : void
    + clone() : Card*
}

class ShieldCard {
    - duration : int
    --
    + getCardName() : string
    + decrementDuration() : void
    + clone() : Card*
}

class TeleportCard {
    --
    + getCardName() : string
    + clone() : Card*
}

class LassoCard {
    --
    + getCardName() : string
    + clone() : Card*
}

class DemolitionCard {
    --
    + getCardName() : string
    + clone() : Card*
}

SkillCard <|-- MoveCard
SkillCard <|-- DiscountCard
SkillCard <|-- ShieldCard
SkillCard <|-- TeleportCard
SkillCard <|-- LassoCard
SkillCard <|-- DemolitionCard
SkillCard ..> CardCategory : uses

@enduml